<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".GenerateActivity">

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="340dp"
        android:layout_height="119dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_textview"
        android:freezesText="true"
        android:gravity="center"
        android:padding="25dp"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/generateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />



    <Button
        android:id="@+id/generateButton"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_textview"
        android:text="@string/genereaza"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberTextView"
        android:layout_gravity="center_horizontal" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fromTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/frame_lucky4blue"
            android:inputType="none"
            android:text="@string/de_la"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fromInputTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/fromInputTextView"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/frame_lucky4blue"
            android:freezesText="true"
            android:inputType="number"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toTextView"
            app:layout_constraintStart_toEndOf="@+id/fromTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/toInputTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/frame_lucky4blue"
            android:freezesText="true"
            android:inputType="number"
            android:text="@string/_100"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/toTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/frame_lucky4blue"
            android:inputType="none"
            android:text="@string/pana_la"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toInputTextView"
            app:layout_constraintStart_toEndOf="@+id/fromInputTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="94dp"
            android:layout_marginLeft="94dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="94dp"
            android:layout_marginRight="94dp"
            android:background="@drawable/frame_lucky3blue"
            android:inputType="none"
            android:text="@string/alege_interval"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#3F51B5"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center_horizontal" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateButton">

        <Button
            android:id="@+id/jokerButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/frame_lucky1blue"
            android:text="@string/joker"
            android:textColor="#004181"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fiveButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/frame_lucky1blue"
            android:text="@string/loto_5_40"
            android:textColor="#004181"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/jokerButton"
            app:layout_constraintStart_toEndOf="@+id/sixButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/frame_lucky1blue"
            android:text="@string/loto_6_49"
            android:textColor="#004181"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fiveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>